Create left half of sign up page

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,38 @@
 font-family: 'Gloria Hallelujah', cursive; */
 
 .bgPicture {
-    background-image: url(/mydawg.jpeg);
+    background-image: url(mydawg.jpeg);
     background-position: center;
-    background-size: auto;
+    background-size: 100vh;
     width: 40vw;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
+}
+
+.content, .logo {
+    display: flex;
+    flex-flow: row wrap;
+}
+.logo {
+    position: relative;
+    justify-content:center;
+    gap: 2.5vw;
+    align-items: center;
+    background-color: rgba(9, 8, 8, 0.242);
+    color: gold;
+    top: 20vh;
+}
+h1 {
+    font-family: 'Faster One', cursive, Arial, Helvetica, sans-serif;
+    font-size: 4rem;
+    font-weight: lighter;
+    margin: 0;
+}
+
+.paw{
+    width: 4rem;
+    fill: gold
 }
